--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -4,7 +4,7 @@ applications:
   host: allocations-pal-gd
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
+  #env:
+  #  REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
   services:
   - tracker-allocations-database
