--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -4,7 +4,7 @@ applications:
   host: backlog-pal-gd
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
+#  env:
+#    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
   services:
   - tracker-backlog-database
