--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -4,7 +4,7 @@ applications:
   host: timesheets-pal-gd
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
+#  env:
+#    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
   services:
   - tracker-timesheets-database
