--- a/applications/allocations-server/src/main/resources/application.properties
+++ b/applications/allocations-server/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=allocations-server
 
-server.port=8081
+server.port=8085
 spring.datasource.username=tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker_allocations_dev?useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 registration.server.endpoint=http://registration-server
 
 security.basic.enabled=false
 management.security.enabled=false
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
