--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -4,8 +4,11 @@ applications:
   host: allocations-pal-gd
   memory: 1G
   instances: 1
-  #env:
-  #  REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
+  env:
+    GRANT_TYPE: client_credentials
+    SECURITY_USER_NAME: actuator
+    SECURITY_USER_PASSWORD: operations4red
+#  REGISTRATION_SERVER_ENDPOINT: http://registration-pal-gd.apps.longs.pal.pivotal.io
   services:
   - tracker-allocations-database
   - tracker-service-registry
